--- a/bib/Makefile
+++ b/bib/Makefile
@@ -7,4 +7,18 @@ Approaches:
 	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?start=0&limit=95&format=bibtex&v=1' > ApproachesBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/SCAZAMMH/items/top?start=0&limit=95&format=bibtex&v=1' > ApproachesRequired.bib
 
+Collections: 
+	curl 'https://api.zotero.org/groups/344216/collections/Z8V7XKUD/items/top?start=0&limit=95&format=bibtex&v=1' > CollectionsBackground.bib
+	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?start=0&limit=95&format=bibtex&v=1' > CollectionsRequired.bib
 
+Introduction: 
+	curl 'https://api.zotero.org/groups/344216/collections/2B5TZR74/items/top?start=0&limit=95&format=bibtex&v=1' > IntroductionBackground.bib
+	curl 'https://api.zotero.org/groups/344216/collections/M4VAFZ3G/items/top?start=0&limit=95&format=bibtex&v=1' > IntroductionRequired.bib
+
+Preservation: 
+	curl 'https://api.zotero.org/groups/344216/collections/QB399RJC/items/top?start=0&limit=95&format=bibtex&v=1' > PreservationBackground.bib
+	curl 'https://api.zotero.org/groups/344216/collections/8DH6TR78/items/top?start=0&limit=95&format=bibtex&v=1' > PreservationRequired.bib
+
+Research: 
+	curl 'https://api.zotero.org/groups/344216/collections/7TJ9WWEE/items/top?start=0&limit=95&format=bibtex&v=1' > ResearchBackground.bib
+	curl 'https://api.zotero.org/groups/344216/collections/HK7PM5MN/items/top?start=0&limit=95&format=bibtex&v=1' > ResearchRequired.bib
