the rest of the generated md files in bib

--- a/bib/Makefile
+++ b/bib/Makefile
@@ -44,30 +44,45 @@ Identity:
 Preservation: 
 	curl 'https://api.zotero.org/groups/344216/collections/QB399RJC/items/top?start=0&limit=95&format=bibtex&v=1' > PreservationBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/8DH6TR78/items/top?start=0&limit=95&format=bibtex&v=1' > PreservationRequired.bib
+	curl 'https://api.zotero.org/groups/344216/collections/QB399RJC/items/top?format=bib&v=1'|pandoc -f html -o PreservationBackground.md
+	curl 'https://api.zotero.org/groups/344216/collections/8DH6TR78/items/top?format=bib&v=1'|pandoc -f html -o PreservationRequired.md
 
 Research: 
 	curl 'https://api.zotero.org/groups/344216/collections/7TJ9WWEE/items/top?start=0&limit=95&format=bibtex&v=1' > ResearchBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/HK7PM5MN/items/top?start=0&limit=95&format=bibtex&v=1' > ResearchRequired.bib
+	curl 'https://api.zotero.org/groups/344216/collections/7TJ9WWEE/items/top?format=bib&v=1'|pandoc -f html -o ResearchBackground.md
+	curl 'https://api.zotero.org/groups/344216/collections/HK7PM5MN/items/top?format=bib&v=1'|pandoc -f html -o ResearchRequired.md
 
 Search: 
 	curl 'https://api.zotero.org/groups/344216/collections/VQR3IP7Q/items/top?start=0&limit=95&format=bibtex&v=1' > SearchBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/IPSBZMD8/items/top?start=0&limit=95&format=bibtex&v=1' > SearchRequired.bib
+	curl 'https://api.zotero.org/groups/344216/collections/VQR3IP7Q/items/top?format=bib&v=1'|pandoc -f html -o SearchBackground.md
+	curl 'https://api.zotero.org/groups/344216/collections/IPSBZMD8/items/top?format=bib&v=1'|pandoc -f html -o SearchRequired.md
 
 Structures: 
 	curl 'https://api.zotero.org/groups/344216/collections/EXRP2V7P/items/top?start=0&limit=95&format=bibtex&v=1' > StructuresBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/39669DZH/items/top?start=0&limit=95&format=bibtex&v=1' > StructuresRequired.bib
+	curl 'https://api.zotero.org/groups/344216/collections/EXRP2V7P/items/top?format=bib&v=1'|pandoc -f html -o StructuresBackground.md
+	curl 'https://api.zotero.org/groups/344216/collections/39669DZH/items/top?format=bib&v=1'|pandoc -f html -o StructuresRequired.md
 
 SubjAnalysis: 
 	curl 'https://api.zotero.org/groups/344216/collections/VKJ9KXK2/items/top?start=0&limit=95&format=bibtex&v=1' > SubjAnalysisBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/3U7AKIUM/items/top?start=0&limit=95&format=bibtex&v=1' > SubjAnalysisRequired.bib
+	curl 'https://api.zotero.org/groups/344216/collections/VKJ9KXK2/items/top?format=bib&v=1'|pandoc -f html -o SubjAnalysisBackground.md
+	curl 'https://api.zotero.org/groups/344216/collections/3U7AKIUM/items/top?format=bib&v=1'|pandoc -f html -o SubjAnalysisRequired.md
 
 SubjLanguages: 
 	curl 'https://api.zotero.org/groups/344216/collections/2GH7KA69/items/top?start=0&limit=95&format=bibtex&v=1' > SubjLanguagesBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/EZC36Z9N/items/top?start=0&limit=95&format=bibtex&v=1' > SubjLanguagesRequired.bib
+	curl 'https://api.zotero.org/groups/344216/collections/2GH7KA69/items/top?format=bib&v=1'|pandoc -f html -o SubjLanguagesBackground.md
+	curl 'https://api.zotero.org/groups/344216/collections/EZC36Z9N/items/top?format=bib&v=1'|pandoc -f html -o SubjLanguagesRequired.md
 
 UseUsers: 
 	curl 'https://api.zotero.org/groups/344216/collections/ACJIKKDC/items/top?start=0&limit=95&format=bibtex&v=1' > UseUsersBackground.bib
 	curl 'https://api.zotero.org/groups/344216/collections/3QGWRGMI/items/top?start=0&limit=95&format=bibtex&v=1' > UseUsersRequired.bib
+	curl 'https://api.zotero.org/groups/344216/collections/ACJIKKDC/items/top?format=bib&v=1'|pandoc -f html -o UseUsersBackground.md
+	curl 'https://api.zotero.org/groups/344216/collections/3QGWRGMI/items/top?format=bib&v=1'|pandoc -f html -o UseUsersRequired.md
 
 LIS501: 
 	curl 'https://api.zotero.org/groups/344216/items/top?start=0&limit=95&format=bibtex&v=1' > LIS501.bib
+	curl 'https://api.zotero.org/groups/344216/items/top?format=bib&v=1'|pandoc -f html -o LIS501.md
