removed Fall readings files

--- a/bib/Makefile
+++ b/bib/Makefile
@@ -5,86 +5,66 @@
 .SUFFIXES: .tex .dvi .bib .pdf .sgml .html .md
 
 
-All: Approaches Collections Evaluation General Introduction Identity Preservation Research Search Structures SubjLanguages UseUsers LIS501
-
-
-Documents: 
-	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o ApproachesBackground.md
-
-Collections: 
-	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o ApproachesBackground.md
-
-Searching: 
-	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o ApproachesBackground.md
-
-Problems:
-	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o ApproachesBackground.md
-
-Users:
-	curl 'https://api.zotero.org/groups/344216/collections/Z8V7XKUD/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o CollectionsBackground.md
-
-Methods:
-	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o CollectionsRequired.md
-
-Approaches:
-	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o CollectionsRequired.md
-
-Subjects:
-	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o CollectionsRequired.md
-
-
-
-
-Approaches: 
-	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o ApproachesBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/SCAZAMMH/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o  ApproachesRequired.md
-
-
-Evaluation: 
-	curl 'https://api.zotero.org/groups/344216/collections/GK7SVKMJ/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o EvaluationBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/665399P8/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o EvaluationRequired.md
-
-General: 
-	curl 'https://api.zotero.org/groups/344216/collections/P9XVEEDG/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o GeneralBackground.md
-
-Introduction: 
-	curl 'https://api.zotero.org/groups/344216/collections/2B5TZR74/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o IntroductionBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/M4VAFZ3G/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o IntroductionRequired.md
-
-Identity: 
-	curl 'https://api.zotero.org/groups/344216/collections/T3T95I4B/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o IdentityBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/F6WM8HP8/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o IdentityRequired.md
-
-Preservation: 
-	curl 'https://api.zotero.org/groups/344216/collections/QB399RJC/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o PreservationBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/8DH6TR78/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o PreservationRequired.md
-
-Research: 
-	curl 'https://api.zotero.org/groups/344216/collections/7TJ9WWEE/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o ResearchBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/HK7PM5MN/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o ResearchRequired.md
-
-Search: 
-	curl 'https://api.zotero.org/groups/344216/collections/VQR3IP7Q/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o SearchBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/IPSBZMD8/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o SearchRequired.md
-
-Structures: 
-	curl 'https://api.zotero.org/groups/344216/collections/EXRP2V7P/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o StructuresBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/39669DZH/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o StructuresRequired.md
-
-SubjAnalysis: 
-	curl 'https://api.zotero.org/groups/344216/collections/VKJ9KXK2/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o SubjAnalysisBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/3U7AKIUM/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o SubjAnalysisRequired.md
-
-SubjLanguages: 
-	curl 'https://api.zotero.org/groups/344216/collections/2GH7KA69/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o SubjLanguagesBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/EZC36Z9N/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o SubjLanguagesRequired.md
-
-UseUsers: 
-	curl 'https://api.zotero.org/groups/344216/collections/ACJIKKDC/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o UseUsersBackground.md
-	curl 'https://api.zotero.org/groups/344216/collections/3QGWRGMI/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o UseUsersRequired.md
+All: Approaches Documents Classification Collections Convenience Evaluation General Interfaces Methods Overload Preservation Production Represent Research Searching Serendipity Social Specifying Standards Users LIS501
 
 LIS501: 
 	curl 'https://api.zotero.org/groups/344216/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o LIS501.md
+
+Documents: 
+	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Documents.md
+
+Collections: 
+	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Collections.md
+
+Searching: 
+	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Searching.md
+
+Specifying:
+	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Specifying.md
+
+Serendipity:
+	curl 'https://api.zotero.org/groups/344216/collections/Z8V7XKUD/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Serendipity.md
+
+Interfaces:
+	curl 'https://api.zotero.org/groups/344216/collections/Z8V7XKUD/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Interfaces.md
+
+Overload:
+	curl 'https://api.zotero.org/groups/344216/collections/Z8V7XKUD/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Overload.md
+
+Convenience:
+	curl 'https://api.zotero.org/groups/344216/collections/Z8V7XKUD/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Convenience.md
+
+Users:
+	curl 'https://api.zotero.org/groups/344216/collections/Z8V7XKUD/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Users.md
+
+Methods:
+	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Methods.md
+
+Approaches:
+	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Approaches.md
+
+Classification:
+	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Classification.md
+
+Represent:
+	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Represent.md
+
+Standards:
+	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Standards.md
+
+Evaluation:
+	curl 'https://api.zotero.org/groups/344216/collections/IND4XSQX/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Evaluation.md
+
+
+Social: 
+	curl 'https://api.zotero.org/groups/344216/collections/TKFSRD56/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Social.md
+
+Preservation: 
+	curl 'https://api.zotero.org/groups/344216/collections/QB399RJC/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Preservation.md
+
+Production: 
+	curl 'https://api.zotero.org/groups/344216/collections/GK7SVKMJ/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o Production.md
+
 
 Test: 
 	curl 'https://api.zotero.org/groups/344216/collections/3QGWRGMI/items/top?format=bib&v=1'|python filter1.py > test1.html
