--- a/bib/Makefile
+++ b/bib/Makefile
@@ -5,7 +5,7 @@
 .SUFFIXES: .tex .dvi .bib .pdf .sgml .html .md
 
 
-All: Approaches Documents Classification Collections Convenience Evaluation Interfaces Metadata Methods Overload Preservation Production Represent Searching Serendipity Social Specifying Standards Users LIS501
+All: Approaches Databases Documents Classification Collections Convenience Evaluation Interfaces Metadata Methods Overload Preservation Production Represent Searching Serendipity Social Specifying Standards Users LIS501
 
 LIS501:
 	curl 'https://api.zotero.org/groups/344216/collections/RQXF535V/items/top?format=bib&v=1'|python filter1.py|pandoc -f html -o LIS501.md
